<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Serialization</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="view2">Get Cache</string>
    <string name="text_placeholder">Get Cache</string>
    <string name="create_object">Get Cache</string>
    <string name="serialized_button">Show Serialized Data</string>
    <string name="button_desc">Description</string>
    <string name="contact_title">Contact us at:</string>
    <string name="address_one">#305</string>
    <string name="address_two">Indo Arcade</string>
    <string name="address_three">Family Court Complex</string>
    <string name="address_four">Calicut</string>
    <string name="address_email">Email To gnchyperion@live.com</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="title_activity_twitter">TwitterActivity</string>
    <string name="tweets_title">Latest Tweets</string>

</resources>
